# Noesis

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.ubuntu-ssh  README.md  TODO.md  docker-compose.yml
backend/: .env.example  .env.prod.example  .gitignore  AGENTS.md  Dockerfile  alembic.ini  app.py  config.example.yaml  config.prod.example.yaml  pyproject.toml  server.py
backend/agent/: common_react_agent.py  deep_research_agent.py  factory.py  fault_operation_agent.py  simple_mcp_agent.py  skills_filter.py  super_agent.py
backend/agent/backends/: __init__.py  agent_filesystem.py  agent_path.py  aio_sandbox.py  backend_guards.py  docker_exec.py  docker_exec_sandbox.py  factory.py  local_shell.py  memory.py  mount_paths.py  path_rewrite.py  paths.py  prefix_backend.py  (+2 more)
backend/alembic/: env.py
backend/api/: __init__.py  auth_api.py  chat_api.py  chat_attachment_api.py  knowledge_base_api.py  login_api.py  mcp_api.py  model_api.py  skill_api.py  user_api.py  user_settings_api.py
backend/common/: __init__.py  logging.py  paths.py  sandbox_runner_launcher.py
backend/config/: agent_workspace_paths.py  checkpointer.py  database.py  env.py  extensions_paths.py  get_db.py  mcp_config.py  migrate.py  skills_catalog.py  user_data_paths.py  user_skills_paths.py  yaml_config.py
backend/constants/: code_enum.py
backend/domain/: __init__.py
backend/evals/: .env.example  README.md  __init__.py  __main__.py  bootstrap.py  dataset.py  eval_targets.json  item_fields.py  langfuse_env.py  report.py  runner.py  scoring.py
backend/exceptions/: exception.py  handle.py
backend/http_middleware/: __init__.py  sliding_auth.py
backend/kb/: README.md  __init__.py  download_models.py  ports.py  seed_collections.py
backend/llm/: __init__.py  catalog.py  factory.py  model_limits.py
backend/loadtest/: __init__.py  locustfile.py  queries.py  sse_client.py
backend/middleware/: __init__.py  csrf.py  sliding_auth_middleware.py
backend/model/: chat_models.py  db_models.py
backend/models/: chat_models.py  db_models.py  kb_models.py  scheduled_task_models.py
backend/schemas/: case_generate_vo.py  chat_attachment_vo.py  chat_vo.py  knowledge_base_schema.py  login_vo.py  mcp_vo.py  model_vo.py  qa_vo.py  session_context_vo.py  skill_vo.py
backend/services/: agent_lifecycle.py  channel_run_service.py  chat_attachment_service.py  chat_service.py  kb_collection_config_service.py  login_service.py  mcp_service.py  mention_resolve_service.py  messaging_channel_service.py  qa_service.py  qdrant_service.py  qdrant_shard_fields.py  sandbox_runner_launcher.py  sandbox_service.py  scheduled_task_scheduler.py  scheduled_task_service.py  session_context_service.py  skill_fs_service.py  skill_market_service.py  skills_revision.py  skills_sh_client.py  user_memory_service.py  user_service.py
backend/sql/: README.md  clean_chat.sql  drop_tables.sql  init_sql.sql  initialize_mysql.py  initialize_postgresql.py  rotate_registration_invite.py
backend/tests/: test_agent_cancel_task_id.py  test_agent_filesystem.py  test_agent_runtime_factory.py  test_agent_workspace_paths.py  test_aio_sandbox_backend.py  test_aio_sandbox_integration.py  test_auth_login_session_commit.py  test_auth_stop_token.py  test_batch_delete_sessions.py  test_case_export.py  test_case_generate_vo.py  test_case_resume_flow.py  test_case_scene_batch_generate.py  test_channel_adapter_spi.py  test_channel_inbound_route.py  test_chat_attachment.py  test_chat_attachments_middleware.py  test_chat_attachments_vision.py  test_chat_service_user_id.py  test_chat_session_sandbox_cleanup.py  test_chat_session_workspace_cleanup.py  test_checkpointer.py  test_context_metrics.py  test_context_metrics_integration.py  test_dangling_tool_call_middleware.py  test_deep_research_prompt.py  test_docker_exec_sandbox_backend.py  test_document_parser.py  test_embedding_config.py  test_ensure_session.py  test_eval_agent_browsecomp.py  test_eval_agent_dataset.py  test_eval_agent_integration.py  test_eval_agent_scoring.py  test_eval_case_fixtures.py  test_eval_case_ingest.py  test_eval_case_stage_b_integration.py  test_eval_compression_driver.py  test_eval_compression_fixture_loader.py  test_eval_compression_integration.py  (+92 more)
backend/utils/: attachment_tool.py  auth_token_service.py  common_util.py  langfuse_tracing.py  langgraph_sse_bridge.py  log_util.py  markdown_outline.py  message_builder.py  mysql_util.py  pwd_util.py  response_util.py  stop_token_service.py  stream_failure_notice.py
(+872 files in other folders)
