[project]
name = "backend"
version = "0.1.0"
description = "Noesis Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncmy>=0.2.10",
    "bcrypt>=5.0.0",
    "dashscope>=1.24.7",
    "deepagents>=0.5.0",
    "faiss-cpu>=1.12.0",
    "fastapi[all]>=0.120.0",
    "jieba>=0.42.1",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=1.0.2",
    "langchain-qwq>=0.3.5",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "loguru>=0.7.3",
    "markitdown[docx]>=0.0.1",
    "mcp>=1.19.0",
    "numpy>=2.2.6",
    "qdrant-client>=1.12.0",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "py2neo>=2021.2.4",
    "pydantic-validation-decorator>=0.1.5",
    "pyyaml>=6.0",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
    "rank-bm25>=0.2.2",
    "sqlalchemy[asyncio]>=2.0.44",
    "sqlglot>=27.29.0",
    # Test dependencies
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "qdrant-client>=1.17.1",
    "asyncssh>=2.22.0",
    "langfuse>=3.10.0,<4",
    "python-docx>=1.2.0",
    "langchain-deepseek>=1.0.1",
    "openpyxl>=3.1.5",
    "deepagents>=0.6.7",
    "tavily-python>=0.5.0",
    "ddgs>=9.0.0",
    "agent-sandbox==0.0.30",
]

[project.optional-dependencies]
loadtest = [
    "locust>=2.31.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests that call real LLM or external services",
]
