[project]
name = "backend"
version = "0.1.0"
description = "Noesis Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # API / 持久化
    "alembic>=1.18.5",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.120.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "mcp>=1.19.0",
    "pydantic-validation-decorator>=0.1.5",
    "pyjwt>=2.10.1",
    "psycopg[binary,pool]>=3.2.0",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0.44",
    # Agent
    "deepagents>=0.6.7",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=1.0.2",
    "langchain-qwq>=0.3.5",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-postgres>=3.0.0",
    "tavily-python>=0.5.0",
    "ddgs>=9.0.0",
    # 知识库 / DeepDoc / RAG
    "beartype>=0.18.0",
    "chardet>=5.2.0",
    "huggingface-hub>=0.26.0",
    "jieba>=0.42.1",
    "markdown>=3.6",
    "markitdown[docx]>=0.0.1",
    "numpy>=2.2.6",
    "onnxruntime>=1.19.0",
    "opencv-python-headless>=4.10.0.84",
    "openai>=2.7.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.10.4",
    "pypdf>=5.0.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    # 可观测
    "langfuse>=3.10.0,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.uv]
default-groups = ["dev"]

[project.optional-dependencies]
loadtest = [
    "locust>=2.31.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests that call real LLM or external services",
]
