[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-ssh"
version = "0.1.0"
description = "MCP SSH tools for remote server diagnostics"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "pyyaml>=6.0",
    "loguru>=0.7.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
